--- a/assets/style.css
+++ b/assets/style.css
@@ -24,7 +24,7 @@ h1 {
     color: blue;
 }
 
-
+/* uses object-fit and aspect-ration together for images */
 
 /* DESKTOP MEDIA QUERY */
 /* DESKTOP MEDIA QUERY */
