--- a/assets/style-landing.css
+++ b/assets/style-landing.css
@@ -1,6 +1,9 @@
+/* font styles */
+
 :root {
-    --font-size: 24px;
-    --color: darkgray;
+    --font-size: 3rem;
+    --primary-color: white;
+    --Secondary-color: black;
     
     --gutter: calc(var(--font-size) * 1.618);
 }
@@ -8,6 +11,8 @@
 body {
     font-family: sans-serif;
     font-size: var(--font-size);
+
+    background-color: var(--secondary-color);
 
     padding-bottom: calc(var(--gutter) * 3);
     padding-left: var(--gutter);
