--- a/assets/style-landing.css
+++ b/assets/style-landing.css
@@ -53,21 +53,13 @@ em {
 a {
     font-family: var(--main-font);
     color: var(--blue);
-    text-transform: capitalize;
+    text-transform: uppercase;
 }
 
 nav {
     width: 75vw;
     height: 3rem;
     
-    display: flex; 
-    flex-direction: row;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
-}
-
-nav > div {
     display: flex; 
     flex-direction: row;
     justify-content: space-between;
@@ -83,7 +75,10 @@ nav > div {
 }
 
 /* class styles */
-
+.logo {
+    width: 3rem;
+    height: 3rem;
+}
 
 
 /* TABLET MEDIA QUERY */
