--- a/assets/style-landing.css
+++ b/assets/style-landing.css
@@ -59,6 +59,8 @@ a {
 nav {
     width: 75vw;
     height: 3rem;
+
+    padding: var(--spacing);
     
     display: flex; 
     flex-direction: row;
@@ -75,10 +77,7 @@ nav {
 }
 
 /* class styles */
-.logo {
-    width: 3rem;
-    height: 3rem;
-}
+
 
 
 /* TABLET MEDIA QUERY */
