--- a/assets/style-landing.css
+++ b/assets/style-landing.css
@@ -50,6 +50,11 @@ em {
     font-family: var(--italic-font);
 }
 
+p {
+    font-family: var(--main-font);
+    font-size: var(--font-size);
+}
+
 a {
     font-family: var(--main-font);
     color: var(--blue);
@@ -87,11 +92,14 @@ main > ol {
 
 main > ol > li {
     outline: var(--outline);
+    width: 100%;
+    height: 100%;
 }
 
 footer {
     background-color: var(--blue);
     color: var(--color);
+    padding: 0;
 }
 
 /* class styles */
