--- a/assets/style-landing.css
+++ b/assets/style-landing.css
@@ -48,6 +48,7 @@ h1 {
 h2 {
     font-family: var(--main-font);
     font-weight: 500;
+    font-size: calc(var(--font-size) * 2);
 }
 
 em {
@@ -111,6 +112,7 @@ main > ol > li {
     outline: var(--outline);
     width: 100%;
     height: 100%;
+    
 }
 
 footer {
