--- a/assets/style-landing.css
+++ b/assets/style-landing.css
@@ -48,7 +48,7 @@ h1 {
 h2 {
     font-family: var(--main-font);
     font-weight: 500;
-    font-size: calc(var(--font-size) * 2);
+    font-size: calc(var(--font-size) * 1.5);
 }
 
 em {
@@ -112,7 +112,8 @@ main > ol > li {
     outline: var(--outline);
     width: 100%;
     height: 100%;
-    
+
+    padding: var(--spacing);
 }
 
 footer {
@@ -122,7 +123,11 @@ footer {
 }
 
 /* class styles */
-
+.project-content {
+    display: flex;
+    flex-direction: column;
+    row-gap: var(--spacing);
+}
 
 
 /* TABLET MEDIA QUERY */
