--- a/assets/style-landing.css
+++ b/assets/style-landing.css
@@ -121,17 +121,12 @@ main > ol {
     column-gap: var(--gap);
     grid-template-rows: 1fr 1fr;
     row-gap: var(--gap);
-
-    outline: var(--outline);
-    padding: var(--spacing);
 }
 
 main > ol > li {
     outline: var(--outline);
     width: 100%;
     height: 100%;
-
-    padding: var(--spacing);
 }
 
 footer {
@@ -147,6 +142,8 @@ footer {
     display: flex;
     flex-direction: column;
     row-gap: calc(var(--gap) * .5);
+
+    padding: var(--spacing);
 }
 
 .project_tags {
@@ -172,6 +169,14 @@ footer {
     border-radius: 1000px;
 }
 
+.project_image {
+    width: 100%;
+    height: 20rem;
+    object-fit: cover;
+
+    border-bottom: var(--outline);
+}
+
 .navbar_links {
     text-transform: uppercase;
     font-weight: 500;
@@ -189,6 +194,7 @@ footer {
     width: 2rem;
     height: 2rem;
 }
+
 
 
 /* TABLET MEDIA QUERY */
