adjust footer final touch

--- a/assets/style-landing.css
+++ b/assets/style-landing.css
@@ -345,6 +345,8 @@ footer {
         column-gap: var(--gap);
         grid-template-rows: 1fr 1fr;
         row-gap: var(--gap);
+
+        width: auto;
     }
 
     .footer_links > a:hover {
